# feishu-atuo

./: .gitignore  README.md  pyproject.toml  流程分析.md
examples/: example_usage.py
src/feishu_auto/: __init__.py  __main__.py  app.py  auth.py  browser.py  cli.py  config.py  event.py  feishu.py  version.py
tests/: test_feishu_auto.py
