[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-auto"
version = "0.1.0"
description = "飞书开放平台自动化配置工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "cicbyte" }
]
keywords = ["feishu", "lark", "automation", "browser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "DrissionPage>=4.0.0",
    "lark-oapi>=1.0.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.scripts]
feishu-auto = "feishu_auto.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/feishu-auto"
Repository = "https://github.com/yourusername/feishu-auto"

[tool.hatch.build.targets.wheel]
packages = ["src/feishu_auto"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
